# MediaPub

./: Cargo.toml  README.md
src/: db_pool.rs  init.rs  lib.rs  main.rs  route.rs  types.rs  utility.rs
src/route/: items.rs  upload.rs
src/route/user/: login.rs  signup.rs
