[package]
name = "MediaPub"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-cors = "0.7.1"
actix-files = "0.6.8"
actix-multipart = "0.7.2"
actix-web = "4.12.0"

[dependencies.uuid]
version = "1.18.1"
features = [
    "v4"
]

[dependencies.rusqlite]
version = "0.37.0"
features = [
    "bundled"
]

[dependencies.serde]
version = "1.0.228"
features = [
    "derive"
]
