[package]
name = "mediapub"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-cors = "0.7.1"
actix-files = "0.6.8"
actix-multipart = "0.7.2"
actix-web = "4.12.1"
deadpool-postgres = "0.14.1"
mongodb = "3.4.1"
tokio-postgres = "0.7.15"
[dependencies.tokio]
version = "1.34.0"
features = [
    "full"
]

[dependencies.uuid]
version = "1.18.1"
features = [
    "v4"
]

[dependencies.serde]
version = "1.0.228"
features = [
    "derive"
]

