[package]
name = "mediapub"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-cors = "0.7.1"
actix-files = "0.6.8"
actix-multipart = "0.7.2"
actix-web = "4.12.1"
bcrypt = "0.17.1"
deadpool-postgres = "0.14.1"
dotenvy = "0.15.7"
mongodb = "3.4.1"
[dependencies.tokio-postgres]
version = "0.7.15"
features = [
    "with-uuid-1",
    "with-chrono-0_4"
]
[dependencies.tokio]
version = "1.34.0"
features = [
    "full"
]

[dependencies.uuid]
version = "1.18.1"
features = [
    "v4"
]

[dependencies.serde]
version = "1.0.228"
features = [
    "derive"
]

[dependencies.chrono]
version = "0.4"
features = [
    "serde"
]

[dependencies.sha2]
version = "0.10"

[dependencies.hex]
version = "0.4"

[dependencies.rand]
version = "0.8"
